--- a/Project_Nhom10/Project_Nhom10.csproj
+++ b/Project_Nhom10/Project_Nhom10.csproj
@@ -248,6 +248,8 @@
     <None Include="packages.config" />
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\BestSelling.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
